# sequent

./: .gitignore  .pre-commit-hooks.yaml  DESIGN.md  MANIFEST.in  Makefile  README.md  cli.py  lsp_server.py  pyproject.toml  requirements.txt  test_buggy.py
.github/workflows/: ci.yml  deploy-frontend.yml  publish.yml  sequent.yml
backend/: server.py
benchmark/: benchmark.py  benchmark_cases.py  results.json
checkpoints/: training_history.json
dataset/: correct_variants.py  generate_dataset.py  mutation_engine.py  seed_functions.py  seed_functions_extra.py  z3_label.py
examples/: buggy.js  buggy_samples.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/api/: analyze.py
frontend/api/verifier/: js_verifier.py  symbolic_executor.py  z3_engine.py
frontend/src/: App.jsx  Layout.jsx  index.css  main.jsx
frontend/src/pages/: Docs.jsx  Landing.jsx  Playground.jsx
hooks/: install.sh  pre-commit
model/: ast_to_graph.py  gnn.py  train.py  ts_to_graph.py
tests/: test_ast_to_graph.py  test_badges.py  test_gnn.py  test_js_verifier.py  test_lsp.py  test_neurosymbolic.py  test_self_learn.py  test_symbolic_executor.py  test_watcher.py  test_z3_engine.py
verifier/: badges.py  neurosymbolic.py  self_learn.py  symbolic_executor.py  watcher.py  z3_engine.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
