[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequent-verify"
version = "0.1.0"
description = "Neural Formal Verification Engine — GNN proposes, Z3 disposes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Devang Pratap Singh", email = "devangpratapsingh@outlook.com"},
]
keywords = ["verification", "formal-methods", "gnn", "z3", "bug-detection", "neurosymbolic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "z3-solver>=4.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]
dev = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
]

[project.scripts]
sequent = "cli:main"

[project.urls]
Homepage = "https://github.com/devangpratapsingh/sequent"
Repository = "https://github.com/devangpratapsingh/sequent"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["model*", "verifier*", "backend*", "dataset*", "benchmark*"]
exclude = ["dataset.generated*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
